<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.ask.QuestionFragment">

    <data>

        <variable
            name="viewModel"
            type="com.miriga.rieng.ui.ask.QuestionViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/p56"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/models" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cyan_800_overlay" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/image"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/p25"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerInside"
                    app:civ_border_color="@color/green_400"
                    app:civ_circle_color="@color/green_400"
                    app:srcCompat="@drawable/ic_q" />

                <TextView
                    android:id="@+id/text_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:padding="16dp"
                    android:textColor="@color/white"
                    android:text="@string/ask_any_question_you_may_want_answered_we_will_keep_everything_confidential_you_can_leave_your_number_in_case_you_want_us_to_contact_you"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/grey_10"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:minLines="4"
                    android:hint="@string/ask_a_question_and_leave_your_contact_for_feedback"
                    android:text="@={viewModel.question.question}"
                    app:error="@{viewModel.question.questionError}"
                    app:onFocus="@{viewModel.getQuestionOnFocusChangeListener()}" />

                <Button
                    android:id="@+id/btnsubmit"
                    style="@style/Button.Primary"
                    android:background="@color/green_400"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:onClick="@{() -> viewModel.onQuestionClick()}"
                    android:text="@string/submit" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>
</layout>