<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/models" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cyan_800_overlay" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/p16"
        tools:context=".ui.settings.SettingsFragment">

        <TextView
            android:id="@+id/txtage"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="@dimen/p25"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:padding="@dimen/p16"
            android:text="@string/age"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/age"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/p25"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:padding="@dimen/p16"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txtage"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="23" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/p16"
            android:layout_marginRight="@dimen/p16"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtage" />

        <TextView
            android:id="@+id/txtgender"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="@dimen/p16"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:padding="@dimen/p16"
            android:text="@string/gender"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/age"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtage" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/p16"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:padding="@dimen/p16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txtgender"
            app:layout_constraintTop_toBottomOf="@+id/txtage"
            android:textColor="@color/white"
            tools:text="Male" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/p16"
            android:layout_marginRight="@dimen/p16"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtgender" />

        <Button
            android:id="@+id/btnEdit"
            style="@style/Button.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/holo_purple"
            android:text="@string/edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>